desativando propriedade jpa que impede de atualizar automaticamente o db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.database-platform=${DB_DIALECT}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.jakarta.persistence.schema-generation.database.action=none
+# spring.jpa.properties.jakarta.persistence.schema-generation.database.action=none
 
 # ===========================================
 # Web MVC
