--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -157,6 +157,7 @@ stages:
                 --registry-username "$(ACR_USERNAME)" \
                 --registry-password "$(ACR_PASSWORD)" \
                 --dns-name-label "$(containerDnsName)" \
+                --os-type Linux \
                 --ports 8081 \
                 --environment-variables \
                   SPRING_PROFILES_ACTIVE=production \
