--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.password=${DB_PASSWORD}
 # JPA / Hibernate
 # ===========================================
 spring.jpa.database-platform=${DB_DIALECT}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # spring.jpa.properties.jakarta.persistence.schema-generation.database.action=none
